промежуточный коммит для запуска тестов

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </p>
   </header>
   <main class="main">
-    <section class="grid-3-columns">
+    <section class="grid-columns">
       <h2 class="main-section-title">Почему сосредоточиться так сложно</h2>
       <ul class="main-section-list">
         <li class="main-section-item">
@@ -77,9 +77,9 @@
         </li>
       </ul>
     </section>
-    <section class="main-section-what">
+    <section class="main-section-what padding-top-80">
       <h2 class="main-section-title">Что снижает концентрацию внимания?</h2>
-      <ul class="main-content-what grid-3-columns">
+      <ul class="main-content-what grid-columns">
         <li class="main-section-item-what">
           <h3 class="main-content-title title-decor">Многозадачность</h3>
           <p class="main-content-text">
@@ -116,7 +116,7 @@
         </li>
         </div>
     </section>
-    <section class="main-section">
+    <section class="main-section padding-top-80">
       <h2 class="main-section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
       <ul class="main-section-list">
         <li class="main-section-item">
@@ -168,9 +168,9 @@
         </li>
       </ul>
     </section>
-    <section class="main-section-what">
+    <section class="main-section-what padding-top-80">
       <h3 class="main-content-title title-decor">А можно в картинках?</h3>
-      <div class="main-section-image-container grid-3-columns">
+      <div class="main-section-image-container grid-columns">
         <img src="images/sunset.png" alt="Изображение заката" class="image-sunset image-size-100">
         <img src="images/books.png" alt="Изображение книг" class="image-books image-size-100">
         <img src="images/street.png" alt="Изображение улицы" class="image-street image-size-100">
