адаптация дизайна под 1024px

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       Или почему нам так сложно сконцентрироваться, особенно когда очень надо
     </p>
   </header>
-  <main class="main">
+  <main class="main padding-gorizontal-20">
     <section class="grid-columns">
       <h2 class="main-section-title">Почему сосредоточиться так сложно</h2>
       <ul class="main-section-list">
@@ -115,6 +115,7 @@
             затем нужно, чтобы вернуться к работе.
           </p>
         </li>
+        
       </ul>
     </section>
     <section class="main-section padding-top-80">
