адаптация дизайна под 1024px

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         </li>
       </ul>
     </section>
-    <section class="main-section-what padding-top-80">
-      <h2 class="main-section-title">Что снижает концентрацию внимания?</h2>
+    <section class="main-section padding-top-80">
+      <h2 class="main-section-title main-section-title-what">Что снижает концентрацию внимания?</h2>
       <ul class="main-content-what grid-columns">
         <li class="main-section-item-what">
           <h3 class="main-content-title title-decor">Многозадачность</h3>
@@ -170,8 +170,8 @@
         </li>
       </ul>
     </section>
-    <section class="main-section-what padding-top-80">
-      <h3 class="main-content-title title-decor">А можно в картинках?</h3>
+    <section class="main-section padding-top-80">
+      <h3 class="main-content-title title-decor image-section-title">А можно в картинках?</h3>
       <div class="main-section-image-container grid-columns">
         <img src="images/sunset.png" alt="Изображение заката" class="image-sunset image-size-100">
         <img src="images/books.png" alt="Изображение книг" class="image-books image-size-100">
