адаптация дизайна под 1024px

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         
       </ul>
     </section>
-    <section class="main-section padding-top-80">
+    <section class="main-section padding-top-80 main-section-who">
       <h2 class="main-section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
       <ul class="main-section-list">
         <li class="main-section-item">
@@ -149,7 +149,6 @@
             концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить
             прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше
             работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
-            показал
           </p>
         </li>
         <li class="main-section-item">
