Адаптивность дизайна под ширину экрана 768px, 375px

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="./styles/dark.css" />
   <link rel="stylesheet" href="./styles/light.css" />
   <link rel="icon" href="./images/favicon.ico" sizes="any" />
-  <link rel="icon" href="./images/icon.svg" type="image/svg+xml" />
+  <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
   <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
   <script src="./scripts/script.js"></script>
 </head>
@@ -172,11 +172,11 @@
     <section class="main-section padding-top-80">
       <h3 class="main-content-title title-decor image-section-title">А можно в картинках?</h3>
       <div class="main-section-image-container grid-columns">
-        <img src="images/sunset.png" alt="Изображение заката" class="image-sunset image-size-100">
-        <img src="images/books.png" alt="Изображение книг" class="image-books image-size-100">
-        <img src="images/street.png" alt="Изображение улицы" class="image-street image-size-100">
-        <img src="images/tape.png" alt="Изображение проигрывателя" class="image-tape image-size-100">
-        <img src="images/ice-cream.png" alt="Изображение мороженого" class="image-ice-cream image-size-100">
+        <img src="./images/sunset.png" alt="Изображение заката" class="image-sunset image-size-100">
+        <img src="./images/books.png" alt="Изображение книг" class="image-books image-size-100">
+        <img src="./images/street.png" alt="Изображение улицы" class="image-street image-size-100">
+        <img src="./images/tape.png" alt="Изображение проигрывателя" class="image-tape image-size-100">
+        <img src="./images/ice-cream.png" alt="Изображение мороженого" class="image-ice-cream image-size-100">
       </div>
     </section>
   </main>
