--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./fonts/fonts.css" />
   <meta name="color-scheme" content="dark light" />
   <title>Сложно сосредоточиться</title>
-  <link rel="stylesheet" href="./fonts/fonts.css">
+  <link rel="icon" href="./images/favicon.ico" sizes="any" />
+  <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+  <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
   <link rel="stylesheet" href="./styles/variables.css" />
   <link rel="stylesheet" href="./styles/style.css" />
   <link rel="stylesheet" href="./styles/dark.css" />
   <link rel="stylesheet" href="./styles/light.css" />
-  <link rel="icon" href="./images/favicon.ico" sizes="any" />
-  <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
   <script src="./scripts/script.js"></script>
 </head>
 
@@ -54,9 +54,9 @@
           <h3 class="main-content-title title-decor">Многозадачность</h3>
           <p class="main-content-text">
             Особенно сложно сосредоточиться, когда задач много и все они —
-            важные. Где же легендарная многозадачность, когда она так нужна вам
-            (и всем нанимающим менеджерам этого мира)? А дело в том, что её
-            просто не существует. Исследователи выяснили, что мозгу тяжело
+            важные. Где же легендарная многозадачность, когда она так нужна
+            вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+            её просто не существует. Исследователи выяснили, что мозгу тяжело
             концентрироваться даже на двух делах одновременно. А когда в поле
             внимания попадает несколько важных задач, организм паникует и
             выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
@@ -66,30 +66,32 @@
         <li class="main-section-item">
           <h3 class="main-content-title title-decor">Дофамин</h3>
           <p class="main-content-text">
-            С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
-            невозможности сосредоточиться замешана и полная противоположность
-            стрессу — дофамин. Это вещество участвует в системе вознаграждения
-            мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на
-            что-то более «приятное» для мозгов. Например, смотрим лайки в
-            соцсетях. В это время и выделяется дофамин — и мы чувствуем
-            удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
-            тем больше удовольствия получаешь.
+            С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+            нашей невозможности сосредоточиться замешана и полная
+            противоположность стрессу — дофамин. Это вещество участвует в
+            системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
+            от важной задачи на что-то более «приятное» для мозгов. Например,
+            смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
+            чувствуем удовольствие. Получается замкнутый круг: чем больше
+            отвлекаешься, тем больше удовольствия получаешь.
           </p>
         </li>
       </ul>
     </section>
     <section class="main-section padding-top-80">
-      <h2 class="main-section-title main-section-title-what">Что снижает концентрацию внимания?</h2>
+      <h2 class="main-section-title main-section-title-what">
+        Что снижает концентрацию внимания?
+      </h2>
       <ul class="main-content-what grid-columns">
         <li class="main-section-item-what">
           <h3 class="main-content-title title-decor">Многозадачность</h3>
           <p class="main-content-text">
             Как концентрация может снижаться из-за… концентрации? Любая
-            стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
-            мозг постоянно «сканировать» окружающую среду на предмет опасности.
-            Например, читать новости вместо работы. Но быть собранными всё время
-            — невозможно. Концентрация — мышца, и она может не выдержать, если
-            не давать ей отдохнуть.
+            стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+            наш мозг постоянно «сканировать» окружающую среду на предмет
+            опасности. Например, читать новости вместо работы. Но быть
+            собранными всё время — невозможно. Концентрация — мышца, и она
+            может не выдержать, если не давать ей отдохнуть.
           </p>
         </li>
         <li class="main-section-item-what">
@@ -97,93 +99,116 @@
           <p class="main-content-text">
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
             доставляют в мозг энергию и помогают ему лучше работать. Но уходит
-            эта энергия также быстро, как и приходит. А мы в результате попадаем
-            на «углеводные качели»: как только действие «быстрых углеводов»
-            заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
-            больше быстрых углеводов.
+            эта энергия также быстро, как и приходит. А мы в результате
+            попадаем на «углеводные качели»: как только действие «быстрых
+            углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+            хотим ещё больше быстрых углеводов.
           </p>
         </li>
         <li class="main-section-item-what">
           <h3 class="main-content-title title-decor">Гаджеты</h3>
           <p class="main-content-text">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в
-            наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
-            утятами. В результате мозг пытается переключиться с одной задачи на
-            другую — и просто не может. А чтобы вернуться к состоянию полной
-            концентрации, человеку в среднем нужно 20 минут. Вот и получается,
-            что чем больше времени мы проводим в гаджетах, тем больше времени
-            затем нужно, чтобы вернуться к работе.
+            наушниках — подкаст, а на компьютере фоном — ещё и видео с
+            забавными утятами. В результате мозг пытается переключиться с
+            одной задачи на другую — и просто не может. А чтобы вернуться к
+            состоянию полной концентрации, человеку в среднем нужно 20 минут.
+            Вот и получается, что чем больше времени мы проводим в гаджетах,
+            тем больше времени затем нужно, чтобы вернуться к работе.
           </p>
         </li>
-        
       </ul>
     </section>
     <section class="main-section padding-top-80 main-section-who">
-      <h2 class="main-section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+      <h2 class="main-section-title">
+        Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+        секунд)
+      </h2>
       <ul class="main-section-list">
         <li class="main-section-item">
-          <h3 class="main-content-title title-decor">5 простых (на самом деле не очень) советов</h3>
+          <h3 class="main-content-title title-decor">
+            5 простых (на самом деле не очень) советов
+          </h3>
         </li>
         <li class="main-section-item">
-          <h3 class="main-content-title title-decor main-section-item-title">Представьте небо и облака</h3>
+          <h3 class="main-content-title title-decor main-section-item-title">
+            Представьте небо и облака
+          </h3>
           <p class="main-content-text">
-            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные
-            мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
-            представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо
-            всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий
-            момент, а не волноваться о потенциальных проблемах из будущего.
+            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+            успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+            как раз и мешают эти сложные задачи делать. В такие моменты можно
+            закрыть глаза и представить, что чистое небо — это вы, а облака —
+            тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+            где-то там, за тучами, и никуда не денется. Это упражнение поможет
+            вернуться в настоящий момент, а не волноваться о потенциальных
+            проблемах из будущего.
           </p>
         </li>
         <li class="main-section-item">
-          <h3 class="main-content-title title-decor main-section-item-title">Включите музыку</h3>
+          <h3 class="main-content-title title-decor main-section-item-title">
+            Включите музыку
+          </h3>
           <p class="main-content-text">
-            Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень
-            сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист
-            c «белым шумом» или нейромузыкой.
+            Но не любую, и не любимую. Любимая может быть связана с сильными
+            положительными эмоциями, которые тоже очень сильно отвлекают.
+            Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+            попробовать включить плейлист c «белым шумом» или нейромузыкой.
           </p>
         </li>
         <li class="main-section-item">
-          <h3 class="main-content-title title-decor main-section-item-title">Прогуляйтесь</h3>
+          <h3 class="main-content-title title-decor main-section-item-title">
+            Прогуляйтесь
+          </h3>
           <p class="main-content-text">
-            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает
-            концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить
-            прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше
-            работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+            показал, что созерцание природы повышает концентрацию, в то время
+            как после просмотра городских пейзажей она наоборот понижается.
+            Можно совместить прогулку с физическими упражнениями или бегом —
+            так в мозг поступит ещё больше кислорода и он будет лучше
+            работать. Но и простая двадцатиминутная прогулка — тоже отличный
+            вариант.
           </p>
         </li>
         <li class="main-section-item">
-          <h3 class="main-content-title title-decor main-section-item-title">Хорошо ешьте</h3>
+          <h3 class="main-content-title title-decor main-section-item-title">
+            Хорошо ешьте
+          </h3>
           <p class="main-content-text">
-            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в
-            крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый
-            рис, хлеб из цельнозерновой пшеницы.
+            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+            которые препятствуют резким скачкам сахара в крови. Например, с
+            высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+            чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
           </p>
         </li>
         <li class="main-section-item">
-          <h3 class="main-content-title title-decor main-section-item-title">Читайте</h3>
+          <h3 class="main-content-title title-decor main-section-item-title">
+            Читайте
+          </h3>
           <p class="main-content-text">
-            Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно
-            нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто
-            тренирует направленное внимание.
+            Настоящие бумажные книги. Это правда помогает с концентрацией:
+            чтобы прочитать пост в соцсети, достаточно нескольких минут или
+            даже секунд. А вот интересная книга способна затянуть и на
+            несколько часов и круто тренирует направленное внимание.
           </p>
         </li>
       </ul>
     </section>
     <section class="main-section padding-top-80">
-      <h3 class="main-content-title title-decor image-section-title">А можно в картинках?</h3>
+      <h3 class="main-content-title title-decor image-section-title">
+        А можно в картинках?
+      </h3>
       <div class="main-section-image-container grid-columns">
-        <img src="./images/sunset.png" alt="Изображение заката" class="image-sunset image-size-100">
-        <img src="./images/books.png" alt="Изображение книг" class="image-books image-size-100">
-        <img src="./images/street.png" alt="Изображение улицы" class="image-street image-size-100">
-        <img src="./images/tape.png" alt="Изображение проигрывателя" class="image-tape image-size-100">
-        <img src="./images/ice-cream.png" alt="Изображение мороженого" class="image-ice-cream image-size-100">
+        <img src="./images/sunset.png" alt="Изображение заката" class="image-sunset image-size-100" />
+        <img src="./images/books.png" alt="Изображение книг" class="image-books image-size-100" />
+        <img src="./images/street.png" alt="Изображение улицы" class="image-street image-size-100" />
+        <img src="./images/tape.png" alt="Изображение проигрывателя" class="image-tape image-size-100" />
+        <img src="./images/ice-cream.png" alt="Изображение мороженого" class="image-ice-cream image-size-100" />
       </div>
     </section>
   </main>
   <footer class="footer">
-    <h2 class="footer-title">
-      focus
-    </h2>
+    <h2 class="footer-title">focus</h2>
   </footer>
 </body>
 
